# CONES

./: .gitignore  Doxyfile  HELP_cwipiConfig.txt  KF_coupling.C  KF_coupling_functions.C  MyIcoFoam.C  README.md  appConfig  c_cavity_coupling.c  c_cavity_coupling2.c  cwipiConfig  debugpolyhedra.C  debugrectangle.C  debugstrangegeometry.C  initCwipiIco  log.cwipiIcoFoamPar  makefile
lib/cwipi-1.1.0/: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  README.md  bftc_config.h.in  cwp_config.h.in  cwp_config_priv.h.in  fvmc_config.h.in
lib/cwipi-1.1.0/Cython/: CMakeLists.txt  cwipi_cython.h
lib/cwipi-1.1.0/Cython/cwipi/: CMakeLists.txt  __init__.py  cwipi.pyx.in  setup.py
lib/cwipi-1.1.0/Cython/pycwp/: CMakeLists.txt  __init__.py  pycwp.pyx.in  setup.py
lib/cwipi-1.1.0/Cython/pycwpclt/: CMakeLists.txt  __init__.py  pycwpclt.pyx.in  setup.py
lib/cwipi-1.1.0/cmake/modules/: cwp_version.cmake
lib/cwipi-1.1.0/cmake/templates/: cwpConfig.cmake.in  cwpConfigVersion.cmake.in
lib/cwipi-1.1.0/doc/: CMakeLists.txt  Doxyfile.in  mainpage.h
lib/cwipi-1.1.0/doc/sphinx/: Makefile  conf.py.in
lib/cwipi-1.1.0/include/: cwipi.h  cwipi_config.h  pdm.h  pdm.mod  pdm_array.h  pdm_binary_search.h  pdm_block_to_part.mod  pdm_cf_array.F90  pdm_cf_array.mod  pdm_closest_points.mod  pdm_config.h  pdm_configf.h  pdm_dcube_gen.F90  pdm_dcube_gen.h  pdm_dcube_gen.mod  pdm_dcube_nodal_gen.h  pdm_dist_cloud_surf.F90  pdm_dist_cloud_surf.h  pdm_dist_cloud_surf.mod  pdm_distrib.h  pdm_dmesh_nodal_elmts.h  pdm_dmesh_nodal_to_dmesh.h  pdm_domain_interface.h  pdm_edges_intersect.h  pdm_extract_part.F90  pdm_extract_part.h  pdm_extract_part.mod  pdm_fortran.mod  pdm_fortran_to_c_string.h  pdm_generate_mesh.mod  pdm_global_mean.mod  pdm_global_reduce.F90  pdm_global_reduce.mod  pdm_gnum.F90  pdm_gnum.mod  pdm_gnum_location.mod  pdm_handles.h  pdm_hash_tab.h  pdm_io.F90  pdm_io.h  (+43 more)
lib/cwipi-1.1.0/lib/: libcwp.so.1.1.0  libcwpf.so.0.12.0  libpdm.so.2.4.1  libpdm_io.so.2.4.1  libpdm_mpi.so.2.4.1  libpdm_no_mpi.so.2.4.1  libpdmf.so.2.4.1
lib/cwipi-1.1.0/pattern/: user_interp_function_c_pattern.txt  user_interp_function_fortran_pattern.txt  user_interp_function_python_pattern.txt
lib/cwipi-1.1.0/script/: CMakeLists.txt  cwp_run.in
lib/cwipi-1.1.0/src/: CMakeLists.txt  ChangeLog  applicationProperties.cxx  applicationProperties.hxx  applicationPropertiesDataBase.cxx  applicationPropertiesDataBase.hxx  applicationPropertiesDataBase_i.hxx  couplingDataBase.cxx  couplingDataBase.hxx  couplingDataBase_i.hxx  creeMaillagePolygone2D.c  creeMaillagePolygone2D.h  cwipi.cxx  cwipi_priv.h  cwipi_timer.c  cwipi_timer.h  geomUtilities.cxx  geomUtilities.hxx  grid_mesh.c  grid_mesh.h  locationToDistantMesh.cxx  locationToDistantMesh.hxx  locationToLocalMesh.cxx  locationToLocalMesh.hxx  oldCoupling.cxx  oldCoupling.hxx  oldCoupling_i.hxx  oldMesh.cxx  oldMesh.hxx  quickSort.c  quickSort.h  singleton.hpp  solve_ax_b_4.c  solve_ax_b_4.h  vectorUtilities.hxx
lib/cwipi-1.1.0/src/bft/: bftc_backtrace.c  bftc_backtrace.h  bftc_config_defs.h  bftc_error.c  bftc_error.h  bftc_file.c  bftc_file.h  bftc_fp_trap.c  bftc_fp_trap.h  bftc_mem.c  bftc_mem.h  bftc_mem_usage.c  bftc_mem_usage.h  bftc_printf.c  bftc_printf.h  bftc_sys_info.c  bftc_sys_info.h  bftc_timer.c  bftc_timer.h  bftc_version.c  bftc_version.h
lib/cwipi-1.1.0/src/fortran/: callforthointerpfct.f90  callfortinterpfct.f90  callfortlocinterpfct.f90  cwipi_cf.cxx  cwipi_cf.h  cwipi_f.f90  cwipi_printfort.f90  cwipi_printfort_cf.cxx  cwipi_printfort_cf.h  cwipi_set_output_logical_unit.f90  mod_fvmc_ho_basis.f90  printfort.f90
lib/cwipi-1.1.0/src/fvm/: fvmc_block_dist.c  fvmc_block_dist.h  fvmc_block_to_part.c  fvmc_block_to_part.h  fvmc_box.c  fvmc_box.h  fvmc_box_priv.h  fvmc_box_tree.c  fvmc_box_tree.h  fvmc_config_defs.h  fvmc_convert_array.c  fvmc_convert_array.h  fvmc_coupling.c  fvmc_coupling.h  fvmc_defs.c  fvmc_defs.h  fvmc_file.c  fvmc_file.h  fvmc_gather.c  fvmc_gather.h  fvmc_group.c  fvmc_group.h  fvmc_ho_basis.c  fvmc_ho_basis.h  fvmc_ho_location.c  fvmc_ho_location.h  fvmc_interface.c  fvmc_interface.h  fvmc_io_num.c  fvmc_io_num.h  fvmc_locator.c  fvmc_locator.h  fvmc_morton.c  fvmc_morton.h  fvmc_neighborhood.c  fvmc_neighborhood.h  fvmc_nodal.c  fvmc_nodal.h  fvmc_nodal_append.c  fvmc_nodal_append.h  (+46 more)
lib/cwipi-1.1.0/src/new/: block.cxx  block.hxx  blockCP.cxx  blockCP.hxx  blockFP.cxx  blockFP.hxx  blockHO.cxx  blockHO.hxx  blockStd.cxx  blockStd.hxx  codeProperties.cxx  codeProperties.hxx  codePropertiesDB.cxx  codePropertiesDB.hxx  codePropertiesDB_i.hxx  commWithPart.cxx  commWithPart.hxx  commWithoutPart.cxx  commWithoutPart.hxx  communication.cxx  communication.hxx  coupling.cxx  coupling.hxx  couplingDB.cxx  couplingDB.hxx  couplingDB_i.hxx  coupling_i.hxx  cwp.cxx  cwp.h  cwp_priv.h  factory.hpp  field.cxx  field.hxx  globalData.cxx  globalData.hxx  mesh.cxx  (+16 more)
lib/cwipi-1.1.0/tests/: CMakeLists.txt  Readme  c_client_server_main.c  c_client_server_new_api_c_poly_block.c  c_client_server_new_api_cellface_set_block.c  c_client_server_new_api_deformable.c  c_client_server_new_api_multiple.c  c_client_server_new_api_surf_P1P0_P0P1.c  c_client_server_new_api_variable_mesh.c  c_client_server_new_api_wind_turbine_blade.c  c_ho_palm.c  c_ip_io.c  c_linear_coupling.c  c_linear_location_edgeP2.c  c_new_api.c  c_new_api_c_poly_block.c  c_new_api_cellface_set_block.c  c_new_api_dcube.c  c_new_api_disjoint_comms_multiblock.c  c_new_api_global_data.c  c_new_api_guinea_pig.c  c_new_api_linear_P1P0_P0P1.c  c_new_api_multiblock.c  c_new_api_multiple.c  c_new_api_param.c  c_new_api_part_data.c  c_new_api_part_data2.c  c_new_api_part_data3.c  c_new_api_reverse_knn.c  c_new_api_surf_P0P0.c  c_new_api_surf_P0P0_disjoint_comm.c  c_new_api_surf_P0P0_without_part.c  c_new_api_surf_P1P0_P0P1.c  c_new_api_surf_P1P0_P0P1_dynamic.c  c_new_api_surf_P1P0_P0P1_without_part.c  c_new_api_user_interp_fct.c  c_new_api_variable_mesh.c  c_new_api_vol.c  c_new_api_wind_turbine_blade.c  c_new_to_old_api.c  (+58 more)
lib/cwipi-1.1.0/training/: CMakeLists.txt
(+3784 files in other folders)
